# pre-commit-library

./: .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  DEPENDENCIES.md  LICENSE  README.md  install-macos.sh  install-windows.ps1  pyproject.toml
examples/: ansible-project.yaml  dotnet-project.yaml  full-stack.yaml  go-project.yaml  infrastructure.yaml  java-project.yaml  minimal-security.yaml  nodejs-react.yaml  python-project.yaml
hooks/: __init__.py  angular-lint.sh  ansible-lint.sh  ansible-security-scan.py  ansible-syntax-check.sh  cfn-validate.sh  check-xml.py  check_license.py  detect-verbose-flags.py  detect_hardcoded_credentials.py  detect_hardcoded_urls.py  dockerfile-lint.sh  dotnet-format.sh  dotnet-security-scan.py  dotnet-test.sh  eslint.sh  genai-security-check.py  go-fmt.sh  go-lint.sh  go-security-scan.sh  java-checkstyle.sh  java-spotbugs.sh  npm-audit.sh  prettier.sh  semgrep.sh  terraform-validate.sh  truffhog.sh  tsc-check.sh  yarn-audit.sh
